--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,51 @@
-CMakeLists.txt.user
-CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Testing
-Makefile
-cmake_install.cmake
-install_manifest.txt
-compile_commands.json
-CTestTestfile.cmake
-_deps
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+# binaries
+build/
+bin/
+build-mpi/
+build-static/
+release/
+
+# Eclipse project files
+.cproject
+.project
+.settings/
+
+# intellij project files
+.devcontainer/
+.ipynb_checkpoints/
+.vscode/
+
+#dataset
+dataset/asteroid_dataset
+.DS_Store
+
